Add a header & title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>paste2wiki :: Convert pasted HTML to Wikitext</title>
 
 <script>
 
@@ -73,6 +74,7 @@
 
 </head>
 <body>
+    <h3>Clean up pasted HTML and convert it to wikitext</h3>
 	Paste HTML here:
     <div id="editable" style="border: 2px solid red; min-height: 200px;" contenteditable="true"></div>
 	<button onclick="return convert()">Clean up HTML and convert to Wikitext</button>
