--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 <body>
     <h3>Clean up pasted HTML and convert it to wikitext</h3>
 	Paste HTML here:
-    <div id="editable" style="border: 2px solid red; min-height: 200px;" contenteditable="true"></div>
+    <div id="editable" style="border: 1px solid grey; min-height: 200px;" contenteditable="true"></div>
 	<button onclick="return convert()">Clean up HTML and convert to Wikitext</button>
 <p>Wikitext:</p>
-    <textarea style="width:100%; min-height: 300px" id="output"></textarea>
+<textarea style="border: 1px solid grey; width:100%; min-height: 200px"
+    id="output"></textarea>
 
     <h3>See also</h3>
     <ul>
