--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 break;
             case 'DIV':
             case 'SPAN':
+            case 'BR':
                 // Replace with its children
                 removeWrapperNode(node);
                 return -1;
