Mention name in head

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h3>Clean up pasted HTML and convert it to wikitext</h3>
+    <h3>paste2wiki: Clean up pasted HTML and convert it to wikitext</h3>
 	Paste HTML here:
     <div id="editable" style="border: 1px solid grey; min-height: 200px;" contenteditable="true"></div>
 	<button onclick="return convert()">Clean up HTML and convert to Wikitext</button>
